--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
-    <script src="js/jquery-1.7.2.js"></script>
+    <script src="js/jquery-1.8.2.js"></script>
+    <script src="js/jquery-ui-1.9.1.custom.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
 </head>
@@ -45,53 +46,69 @@
 
     <h3>Search results</h3>
 
-
     <div id="results">
-        <table class="table table-striped">
+        <table class="table table-striped" id="contacts">
             <thead>
             <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Birthdate</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
             </tbody>
+        </table>
     </div>
-    </table>
 </div>
 
 
 <div id="addContact" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Modal header</h3>
+        <h3>New contact</h3>
     </div>
+
+    <div class="alert alert-error fade hide in">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <span id="saverr"></span>
+    </div>
+
     <div class="modal-body">
-        <p>One fine body…</p>
+        <form class="form-horizontal" id="contactform">
+            <div class="control-group">
+                <label class="control-label" for="name">Name</label>
+
+                <div class="controls">
+                    <input type="text" id="name" placeholder="">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="email">Email</label>
+
+                <div class="controls">
+                    <input type="text" id="email" placeholder="">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="address">Address</label>
+
+                <div class="controls">
+                    <input type="text" id="address" placeholder="">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="birthdate">Birthdate</label>
+
+                <div class="controls">
+                    <input type="text" id="birthdate" placeholder="">
+                </div>
+            </div>
+        </form>
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
+        <button class="btn btn-primary" id="newcontact">Save changes</button>
     </div>
 </div>
 
